fix: correctly cause overflow for code blocks on small screens

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -154,7 +154,7 @@ body {
   }
 
   pre {
-    @apply px-0 max-w-full overflow-x-auto;
+    @apply px-0 py-1 overflow-x-auto w-0 min-w-full;
     code {
       @apply rounded-md inset-shadow-sm dark:shadow-none;
     }
